--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,6 @@ version: '${project.version}'
 main: me.serliunx.chatfilterlite.ChatFilterLite
 api-version: 1.17
 authors: [ SerLiunx ]
+commands:
+  cfl:
+    description: main command.
